# SmartCart

./: .cproject  .project  .template  CMakeLists.txt  Makefile  README.md  successVersion.wvproj
APP/: main.c  pages.c
APP/inc/: pages.h
Dependency/StdPeriphDriver/: ch32v30x_i2c.c  ch32v30x_rcc.c
Hardware/: exit.c  exit.h  usart.c  usart.h
User/: HX77.c  HX77.h  Key_Get.c  Key_Get.h  L610.c  L610.h  allshow.c  allshow.h  dma.c  dma.h  lcd.c  lcd.h  main.c  pages.c  pages.h  structures.h  sys.c  sys.h
bsp/: usart.c
bsp/inc/: usart.h
modules/: L610.c  lcd.c
modules/inc/: L610.h  lcd.h
scripts/: build.bat  commands.gdb  load.bat  start_gdb.bat  start_openocd.bat
